# typegripe

./: Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_typegripe.py
tests/file_fixtures/: function_missing_args.py  valid_function.py
typegripe/: check.py
