[tool.poetry]
name = "typegripe"
version = "0.1.0"
description = ""
authors = ["Matt White <code@typenil.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
