[tool.poetry]
name = "typegripe"
version = "0.1.0"
description = ""
authors = ["Matt White <code@typenil.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.3"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
pylint = "^2.5.3"
mccabe = "^0.6.1"
bandit = "^1.6.2"

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
skip-numeric-underscore-normalization = true

[tool.pylint.messages_control]
disable = """
missing-docstring,bad-continuation,fixme
"""

[tool.pylint.reports]
output-format = "colorized"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
